--- a/admin-signup.html
+++ b/admin-signup.html
@@ -194,11 +194,10 @@
   </div>
 
   <script>
-//    -------------------------------
+
+// -------------------------------
 // Tab Switching for Signup/Login/Forgot
 // -------------------------------
-
-
 const tabButtons = document.querySelectorAll(".tab-btn");
 const forms = document.querySelectorAll(".form");
 
@@ -227,9 +226,15 @@ const signupForm = document.getElementById("signupForm");
 signupForm?.addEventListener("submit", async (e) => {
   e.preventDefault();
 
-  const username = document.getElementById("signupUsername").value.trim();
-  const email = document.getElementById("signupEmail").value.trim();
-  const password = document.getElementById("signupPassword").value.trim();
+  const username = document.getElementById("adminName").value.trim();
+  const email = document.getElementById("adminEmail").value.trim();
+  const password = document.getElementById("adminPassword").value.trim();
+  const confirmPassword = document.getElementById("adminConfirmPassword").value.trim();
+
+  if (password !== confirmPassword) {
+    alert("Passwords do not match!");
+    return;
+  }
 
   try {
     const res = await fetch(`${API_URL}/register`, {
@@ -239,14 +244,12 @@ signupForm?.addEventListener("submit", async (e) => {
     });
 
     const data = await res.json();
-
     if (!res.ok) {
       alert(data.message || "Signup failed");
       return;
     }
 
     alert("Signup successful! Please login.");
-    // Switch to login tab automatically
     document.querySelector('.tab-btn[data-target="loginForm"]').click();
   } catch (error) {
     console.error("Signup error:", error);
@@ -273,18 +276,15 @@ loginForm?.addEventListener("submit", async (e) => {
     });
 
     const data = await res.json();
-
     if (!res.ok) {
       alert(data.message || "Login failed");
       return;
     }
 
-    // Save token & username
     localStorage.setItem("adminToken", data.token);
     localStorage.setItem("adminUsername", data.username);
 
-    // Redirect to admin dashboard
-    window.location.href = "admin.html";
+    window.location.href = "admin.html"; // dashboard
   } catch (error) {
     console.error("Login error:", error);
     alert("An error occurred. Contact Admin Dev.");
@@ -309,7 +309,6 @@ forgotForm?.addEventListener("submit", async (e) => {
     });
 
     const data = await res.json();
-
     if (!res.ok) {
       alert(data.message || "Failed to send reset email");
       return;
@@ -318,7 +317,7 @@ forgotForm?.addEventListener("submit", async (e) => {
     alert("Password reset link sent to your email.");
   } catch (error) {
     console.error("Forgot password error:", error);
-    alert("An error occurred. Contact Admin Dev .");
+    alert("An error occurred. Contact Admin Dev.");
   }
 });
 
@@ -330,11 +329,23 @@ window.addEventListener("DOMContentLoaded", () => {
   const resetToken = urlParams.get("resetToken");
 
   if (resetToken) {
-    const resetForm = document.getElementById("resetPasswordForm");
+    // Show reset form, hide others
+    document.getElementById("resetForm").classList.add("active");
+    document.getElementById("loginForm").classList.remove("active");
+    document.getElementById("signupForm").classList.remove("active");
+    document.getElementById("forgotForm").classList.remove("active");
+
+    const resetForm = document.getElementById("resetForm");
     resetForm?.addEventListener("submit", async (e) => {
       e.preventDefault();
 
-      const password = document.getElementById("newPassword").value.trim();
+      const password = document.getElementById("resetPassword").value.trim();
+      const confirmPassword = document.getElementById("resetConfirmPassword").value.trim();
+
+      if (password !== confirmPassword) {
+        alert("Passwords do not match!");
+        return;
+      }
 
       try {
         const res = await fetch(`${API_URL}/reset`, {
@@ -344,7 +355,6 @@ window.addEventListener("DOMContentLoaded", () => {
         });
 
         const data = await res.json();
-
         if (!res.ok) {
           alert(data.message || "Password reset failed");
           return;
@@ -377,7 +387,7 @@ if (window.location.pathname.includes("admin.html")) {
 }
 
 
-
   </script>
+
 </body>
 </html>
