--- a/admin.html
+++ b/admin.html
@@ -450,7 +450,7 @@
 
    
 <!-- Manage Users Section -->
- <div id="pagination" style="margin-top:10px;"></div>
+ 
 <div id="manage-users" class="section" style="display:none;">
   <h3>Manage Users</h3>
    
@@ -509,7 +509,7 @@ end creat user -->
   
 
 <!-- Update User Profile Section -->
-<div id="update-user" class="form-section">
+<!-- <div id="update-user" class="form-section">
   <h3>Update User Profile</h3>
   <form id="updateUserForm" onsubmit="updateUserProfile(event)">
     <label>Full Name</label>
@@ -547,7 +547,44 @@ end creat user -->
 
     <button type="submit">Update Profile</button>
   </form>
+</div> -->
+
+
+<!-- Edit User Modal -->
+<div id="editUserModal" class="modal" style="display:none;">
+  <div class="modal-content">
+    <div class="modal-header">
+      <h3>Edit User</h3>
+      <button onclick="closeModal('editUserModal')">&times;</button>
+    </div>
+    <div class="modal-body">
+      <form id="editUserForm">
+        <input type="hidden" id="editUserId">
+
+        <label>Profile Picture</label>
+        <input type="file" id="editProfilePic" accept="image/*">
+
+        <label>Full Name</label>
+        <input type="text" id="editFullName">
+
+        <label>Email</label>
+        <input type="email" id="editEmail">
+
+        <label>Phone</label>
+        <input type="tel" id="editPhone">
+
+        <label>Status</label>
+        <select id="editStatus">
+          <option value="active">Active</option>
+          <option value="inactive">Inactive</option>
+        </select>
+
+        <button type="submit">Update User</button>
+      </form>
+    </div>
+  </div>
 </div>
+
 
 <!-- update user profile end-->
 
