--- a/userpage.html
+++ b/userpage.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pauls Valley National Bank</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"> -->
     <link rel="stylesheet" href="userpage.css">
     <script src="userpage.js" defer></script>
 
@@ -90,10 +90,8 @@
 
     <div class="dashboard-card">
     <div class="user-info">
-      <img id="profilePic" src="https://i.pravatar.cc/50" alt="User photo" />
-      <h3 id="userName">John Campbell</h3>
-     <!-- Hidden file input for uploading profile picture -->
-     <input type="file" id="uploadPicInput" style="display:none" />
+       <img id="profilePic" src="https://i.pravatar.cc/50" alt="User photo" />
+      <h3 id="userName">Loading...</h3>
     </div>
 
 
