--- a/userpage.html
+++ b/userpage.html
@@ -90,7 +90,8 @@
 
     <div class="dashboard-card">
     <div class="user-info">
-       <img id="profilePic" src="https://i.pravatar.cc/50" alt="User photo" />
+       <img id="profilePic" src="" alt="User photo" style="visibility: hidden;" />
+
       <h3 id="userName">Loading...</h3>
     </div>
 
