--- a/userpage.html
+++ b/userpage.html
@@ -144,12 +144,29 @@
   <div class="modal-content">
     <span class="close" data-close="accountModal">&times;</span>
     <h2>Account Details</h2>
-    <p><strong>Account Number:</strong> <span id="accountNumber">Loading...</span></p>
-    <p><strong>Current Balance:</strong> <span id="accCurrentBalance">$0.00</span></p>
-    <p><strong>Savings Balance:</strong> <span id="accSavingsBalance">$0.00</span></p>
-    <p><strong>Loan Balance:</strong> <span id="accLoanBalance">$0.00</span></p>
+
+    <p><strong>Current Account:</strong> 
+      <span id="currentAccountNumber">Loading...</span>
+    </p>
+
+    <p><strong>Savings Account:</strong> 
+      <span id="savingsAccountNumber">Loading...</span>
+    </p>
+
+    <p><strong>Current Balance:</strong> 
+      <span id="accCurrentBalance">$0.00</span>
+    </p>
+
+    <p><strong>Savings Balance:</strong> 
+      <span id="accSavingsBalance">$0.00</span>
+    </p>
+
+    <p><strong>Loan Balance:</strong> 
+      <span id="accLoanBalance">$0.00</span>
+    </p>
   </div>
 </div>
+
 
 
 
