--- a/userpage.html
+++ b/userpage.html
@@ -231,17 +231,18 @@
 <main class="dashboard">
 
   <!-- Account Summary -->
-  <section class="account-summary">
-    <div class="account-card">
-      <h2>Welcome Back, John</h2>
-      <div class="balance">$5,420.75</div>
-      <div class="account-details">
-        <div><strong>Account No:</strong> **** 1234</div>
-        <div><strong>Type:</strong> Checking</div>
-        <div><strong>Status:</strong> Active</div>
-      </div>
+<section class="account-summary">
+  <div class="account-card">
+    <h2 id="welcomeText">Welcome Back</h2>
+    <div class="balance" id="accountBalance">$0.00</div>
+    <div class="account-details">
+      <div><strong>Account No:</strong> <span id="accountNumber">****</span></div>
+      <div><strong>Type:</strong> <span id="accountType">N/A</span></div>
+      <div><strong>Status:</strong> <span id="accountStatus">N/A</span></div>
     </div>
-  </section>
+  </div>
+</section>
+
 
   <!-- Quick Actions -->
  
