--- a/userpage.html
+++ b/userpage.html
@@ -111,11 +111,11 @@
 </div>
 
     <div class="extra-info">
-       <p>Loan Balance: <span id="loanBalance">$0.00</span></p>
+      <p>Loan Balance: <span id="loanBalance">$0.00</span></p>
       <p>Savings Balance: <span id="savingsBalance">$0.00</span></p>
       <p>Current Balance: <span id="onlyCurrentBalance">$0.00</span></p>
-      <p>Last Login IP: <span style="color: red;">105.113.117.11</span></p>
-      <p>Last Login Date: <span style="color: red;">2025-03-20 10:42:01</span></p>
+      <p>Last Login IP: <span id="lastLoginIP" style="color: red;">Loading...</span></p>
+      <p>Last Login Date: <span id="lastLoginDate" style="color: red;">Loading...</span></p>
     </div>
 
     <div class="actions">
