--- a/userpage.html
+++ b/userpage.html
@@ -90,7 +90,7 @@
 
     <div class="dashboard-card">
     <div class="user-info">
-       <img id="profilePic" src="" alt="User photo" style="visibility: hidden;" />
+       <img id="profilePic" src="" alt="User photo" style="visibility: hidden; cursor: pointer;"/>
 
       <h3 id="userName">Loading...</h3>
     </div>
