--- a/userpage.html
+++ b/userpage.html
@@ -251,11 +251,12 @@
   <div class="actions-grid">
 
     <!-- Transfer Money -->
-    <div class="action-btn">
+   <div class="action-btn">
       <div class="action-icon"><i class="fas fa-exchange-alt"></i></div>
-      <button id="transferBtn" class="action-btn">Transfer</button>
+      <button id="transferBtn">Transfer</button>
       <div class="action-desc">Between accounts or to others</div>
    </div>
+
 
     <!-- View Statements -->
     <div class="action-btn" onclick="openTransactionsModal()">
